--- a/Lessons.html
+++ b/Lessons.html
@@ -23,3 +23,14 @@
             </div>
         </div>
         <!-- This is the end of the navbar -->
+        <div class="intro">
+            <div class="contener">
+                <div class="box1">
+                    <h4>Programmer Learning:The Best Place To Learn Programming</h4>
+                    <p>Welcome To the programmer site, The place of the programmer,here you can learn lessons and practise with our powerful IDE and do too many things with our best teachers for you</p>
+                </div>
+                
+                <img class="imagex" src="images/source.gif">
+            </div>
+            <div class="clear"></div>
+        </div>
