everything is ok

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- This is the start of the navbar -->
         <div class="navbar">
             <div class="contener">
-                <h2>Yummy Potatoes</h2>
+                <h2>Programmer Learning</h2>
                 <ul>
                     <a href="index.html"><li>Home</li></a><a href="Lessons.html"><li>Lessons</li></a><a href="#"><li>Practise</li></a><a href="#"><li>Signup/Login</li></a>
                 </ul>
