--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="clear"></div>
         <br>
         <div class="footer">
-            <p style="text-align: center;">@Created By Mouad Coding</p>
+            <p style="text-align: center;">©Created By Mouad Coding</p>
         </div>
 
         <script src="js/jquery-3.5.1.slim.min.js"></script>
