--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="clear"></div>
         <br>
         <div class="footer">
-            <p style="text-align: center;"><p id="colour">©Created By <p id="greeen">Mouad</p> <p id="reed">*</p> Coding</div></p>
+            <p style="text-align: center;"><div id="colour">©Created By <p id="greeen">Mouad</p> <p id="reed">*</p> Coding</div>
         </p>
 
         <script src="js/jquery-3.5.1.slim.min.js"></script>
