--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <div class="clear"></div>
         <br>
         <div class="footer">
-            <p style="text-align: center;"><div id="colour">©Created By <p id="greeen">Mouad</p> <p id="reed">*</p> Coding</div>
-        </p>
+            <p style="text-align: center;"><div id="colour">©Created By <p id="greeen"> Mouad</p> <p id="reed"> * </p>  Coding </div></p>
+        </div>
 
         <script src="js/jquery-3.5.1.slim.min.js"></script>
         <script src="js/popper.min.js"></script>
