--- a/Lessons.html
+++ b/Lessons.html
@@ -1,36 +1,78 @@
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Lessons</title>
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/bootstrap-4.5.0-dist/css/bootstrap.min.css">
-    </head>
-    <body>
-        <div class="header">
-            <div class="contener">
 
-            </div>
-        </div>
-        <!-- This is the start of the navbar -->
-        <div class="navbar">
-            <div class="contener">
-                <h2>Programmer learning</h2>
-                <ul>
-                    <a href="index.html"><li>Home</li></a><a href="Lessons.html"><li>Lessons</li></a><a href="Practise.html"><li>Practise</li></a><a href="Login.html"><li>Signup/Login</li></a>
-                </ul>
-            </div>
-        </div>
-        <!-- This is the end of the navbar -->
-        <div class="intro">
-            <div class="contener">
-                <div class="box1">
-                    <h4>Programmer Learning:The Best Place To Learn Programming</h4>
-                    <p>Welcome To the programmer site, The place of the programmer,here you can learn lessons and practise with our powerful IDE and do too many things with our best teachers for you</p>
-                </div>
-                
-                <img class="imagex" src="images/source.gif">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Lessons</title>
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/bootstrap-4.5.0-dist/css/bootstrap.min.css">
+</head>
+
+<body>
+	<div class="header">
+		<div class="contener">
+
+		</div>
+	</div>
+	<!-- This is the start of the navbar -->
+	<div class="navbar">
+		<div class="contener">
+			<h2>Programmer learning</h2>
+			<ul>
+				<a href="index.html">
+					<li>Home</li>
+				</a><a href="Lessons.html">
+					<li>Lessons</li>
+				</a><a href="Practise.html">
+					<li>Practise</li>
+				</a><a href="Login.html">
+					<li>Signup/Login</li>
+				</a>
+			</ul>
+		</div>
+	</div>
+	<!-- This is the end of the navbar -->
+	<div class="intro">
+		<div class="contener">
+			<div class="box1">
+				<h4>Courses</h4>
+				<p>So, Hello To Courses Side,We Have Many Couses In Each Language Like:
+					<h5 class="Full">Full Stack Collection</h5>
+					<ul>
+						<li><a class="lang" href="#">HTML</a></li>
+						<li><a class="lang" href="#">CSS</a></li>
+						<li><a class="lang" href="#">JS</a></li>
+						<li><a class="lang" href="#">PY</a></li>
+					</ul>
+					<h5 class="notFull">Not In Full stack Collection(Bonus Courses)</h5>
+					<a class="lang" href="#">PHP</a>
+				</p>
+			</div>
+
+			<img class="imagex" src="images/Lessons_source.gif">
             </div>
             <div class="clear"></div>
+        <div class="courses2">
+            <div class="contener">
+                <div class="box1">
+                    <h4>Here We Go!</h4>
+                    <p>Hey Dude,Do You wanna see our special IDE?</p>
+                    <p>You know what,Our IDE is :</p>
+                    <ul>
+                      <li><p>An Editor</p></li>
+                      <li><p>An Emulator</p></li>
+                    </ul>
+                    <p>I will let you see an example,Just Look at The Image Next to this Text</p>
+                </div>
+                <img class="imagex2" src="images/IDE.gif">
+                <div class="clear"></div>
+                <h3>An Example Of The IDE(For Python)</h3>
+                <iframe frameborder="0" width="100%" height="500px" src="https://replit.com/@CodingMouadGuy/Python-IDE-Show?lite=true" style="text-align:center"></iframe>
+								<div class="clear"></div>
+								<div class="footer">
+            			<p style="text-align: center;">©Created By Mouad Coding </p>
+        				</div>
         </div>
+    </body>
+</html>
