--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
         </div>
         <div class="clear"></div>
-        <br>
-        <div class="footer">
+ 
+        <div class="footer" style="width:1000%">
             <p style="text-align: center;">©Created By Mouad Coding </p>
         </div>
 
